Fix for navigation not aligning correctly

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -396,6 +396,10 @@ button,
         word-wrap: normal;
     }
 
+    .header-extendednavigation {
+        .flex(1 1 auto);
+    }
+
     // Navigation items
     .navigation-item.selected .item-name {
         color: @color__navigation--text--hover;
